# idea-maker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND.md  FRONTEND.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  RTK.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.vue
apps/web/tests/: app.spec.ts
docs/: HARNESS_SYSTEM.md
docs/architecture/: README.md  backend.md  frontend.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/exec-plans/active/: .gitkeep  plan-0001-idea-report-mvp.md  plan-0005-source-collector.md  plan-0006-live-source-integrations.md  sample-idea-report-mvp.md
docs/exec-plans/completed/: plan-0000-harness-bootstrap.md  plan-0001-idea-report-mvp.md  plan-0012-full-test.md  (+38 more)
docs/observability/: README.md
docs/operations/: reliability.md  security.md
docs/product-specs/: index.md
docs/quality/: quality-score.md  review-rubric.md
docs/references/: README.md  codex-extensions.md  codex-git-workflow.md  codex-prompt-pack.md  rag-source-index.md  source-collectors.md
docs/team/: roster.md
evals/: harness_scenarios.yml
lint-rules/: architecture_rules.yml
scripts/: agent-task.sh
services/api/: Dockerfile
tests/: test_harness.py
tools/: agent_doctor.py  architecture_scan.py  docs_freshness.py  exec_plan_guard.py  link_check.py  quality_score.py  structure_guard.py
(+27 files in other folders)
