[project]
name = "idea-maker"
version = "0.1.0"
description = "Codex-first idea report generation service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["services/api/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

